Clean thunder code